--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,15 +2,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.masai.taskmanagerapp">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".views.adapter.TaskApp"
         android:allowBackup="true"
+        android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Taskmanagerapp">
         <activity
-            android:name=".MainActivity"
+            android:name=".views.adapter.LoginActivity"
+            android:exported="true" />
+        <activity
+            android:name=".views.adapter.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.Taskmanagerapp.NoActionBar">
             <intent-filter>
